# OpenGL-Tri

./: CMakeLists.txt
dependencies/glad/: glad.h
src/: glad.c  main.cpp
